src/objects/cec_Alert_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Rule_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alert Rule</label>
        <referenceTo>cec_Alert_Rule__c</referenceTo>
        <relationshipLabel>Alert Tracker</relationshipLabel>
        <relationshipName>Alert_Tracker</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Threshold__c</fullName>
        <formula>Alert_Rule_Id__r.Threshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alert_Tracker_Item_count__c</fullName>
        <description>CEC Alert Tracker Item count is used to count number of Alert Tracker Item.</description>
        <label>Alert Tracker Item count</label>
        <summaryForeignKey>cec_Alert_Tracker_Item__c.Alert_Tracker_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Threshold__c</fullName>
        <description>CEC :  To hold the current Threshold Value of the Alert Tracker</description>
        <label>Current Threshold</label>
        <summaryFilterItems>
            <field>cec_Alert_Tracker_Item__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>cec_Alert_Tracker_Item__c.Alert_Tracker_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DayCode__c</fullName>
        <description>cec_the day the product is manufactured</description>
        <label>DayCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L5_Reason_Code__c</fullName>
        <formula>Alert_Rule_Id__r.L5_Reason_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L5 Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_No_Size__c</fullName>
        <label>Product No Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <formula>Alert_Rule_Id__r.Alert_Type_Image__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC: This field will be used in scheduler job to trigger the alert actions</description>
        <label>Trigger Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Alert Tracker</label>
    <listViews>
        <fullName>ANZ_Alert_Tracker</fullName>
        <columns>Alert_Rule_Id__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>L5_Reason_Code__c</columns>
        <columns>Product_No_Size__c</columns>
        <columns>DayCode__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Current_Threshold__c</columns>
        <columns>Alert_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <label>ANZ Alert Tracker</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Manager_ANZ</role>
            <role>CEC_Manager_SEAA</role>
            <role>CEC_User_ANZ</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Alert_Rule_Id__c</columns>
        <columns>Alert_Threshold__c</columns>
        <columns>Current_Threshold__c</columns>
        <columns>L5_Reason_Code__c</columns>
        <columns>Product_No_Size__c</columns>
        <columns>DayCode__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PH_alert_tracker_detail</fullName>
        <columns>Alert_Rule_Id__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>DayCode__c</columns>
        <columns>Product_No_Size__c</columns>
        <columns>L5_Reason_Code__c</columns>
        <columns>Current_Threshold__c</columns>
        <columns>Alert_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>8/2/2016 12:00 AM</value>
        </filters>
        <label>PH - alert tracker detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Trigger_Email_Sent_Today</fullName>
        <columns>NAME</columns>
        <columns>Alert_Rule_Id__c</columns>
        <columns>DayCode__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Unique_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Trigger Email Sent Today</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEC_Global_Head</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Alert Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>